--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -22,7 +22,7 @@ jobs:
         dotnet-version: 8.0.x
 
     - name: Restore dependencies
-      run: dotnet restore ./CyberSecurityChatBot/ChatBotCyberSecurity.csproj
+      run: dotnet restore CyberSecurityChatBot/ChatBotCyberSecurity.csproj
 
     - name: Build
       run: dotnet build ./CyberSecurityChatBot/ChatBotCyberSecurity.csproj --no-restore
